fix: make hover sign visible by magni glass

--- a/darkstat/front/static_front/custom.css
+++ b/darkstat/front/static_front/custom.css
@@ -37,3 +37,7 @@
 highlight {
     background-color: var(--infocard_text_highlight);
 }
+
+.magni_glass {
+    opacity: 0.45;
+}
